# python-example

./: .gitignore  README.md  pyproject.toml
pyexample/: __main__.py
tests/: test_example.py
